--- a/cbcui/ui/Console.ui
+++ b/cbcui/ui/Console.ui
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0">
+<ui version="4.0" >
  <class>Console</class>
- <widget class="QWidget" name="Console">
-  <property name="geometry">
+ <widget class="QWidget" name="Console" >
+  <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
@@ -10,30 +9,39 @@
     <height>213</height>
    </rect>
   </property>
-  <property name="windowTitle">
+  <property name="windowTitle" >
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout">
-   <property name="spacing">
+  <layout class="QVBoxLayout" >
+   <property name="spacing" >
     <number>0</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin" >
+    <number>0</number>
+   </property>
+   <property name="topMargin" >
+    <number>0</number>
+   </property>
+   <property name="rightMargin" >
+    <number>0</number>
+   </property>
+   <property name="bottomMargin" >
     <number>0</number>
    </property>
    <item>
-    <widget class="QPlainTextEdit" name="ui_console"/>
+    <widget class="QPlainTextEdit" native="1" name="ui_console" />
    </item>
    <item>
-    <layout class="QHBoxLayout">
-     <property name="spacing">
+    <layout class="QHBoxLayout" >
+     <property name="spacing" >
       <number>0</number>
      </property>
      <item>
       <spacer>
-       <property name="orientation">
+       <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0">
+       <property name="sizeHint" >
         <size>
          <width>40</width>
          <height>20</height>
@@ -42,117 +50,153 @@
       </spacer>
      </item>
      <item>
-      <layout class="QHBoxLayout">
-       <property name="spacing">
+      <layout class="QHBoxLayout" >
+       <property name="spacing" >
         <number>3</number>
        </property>
        <item>
-        <widget class="QPushButton" name="ui_leftButton">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+        <widget class="QPushButton" name="ui_leftButton" >
+         <property name="sizePolicy" >
+          <sizepolicy vsizetype="Fixed" hsizetype="Expanding" >
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="minimumSize">
+         <property name="minimumSize" >
           <size>
-           <width>25</width>
-           <height>25</height>
+           <width>30</width>
+           <height>30</height>
           </size>
          </property>
-         <property name="maximumSize">
+         <property name="maximumSize" >
           <size>
-           <width>20</width>
-           <height>20</height>
+           <width>30</width>
+           <height>30</height>
           </size>
          </property>
-         <property name="text">
-          <string>&lt;</string>
+         <property name="styleSheet" >
+          <string>QPushButton{
+icon-size:30px;
+border:0px;
+}</string>
+         </property>
+         <property name="text" >
+          <string/>
+         </property>
+         <property name="icon" >
+          <iconset resource="../rc/images.qrc" >:/actions/arrowLf-27.png</iconset>
          </property>
         </widget>
        </item>
        <item>
-        <layout class="QVBoxLayout">
-         <property name="spacing">
+        <layout class="QVBoxLayout" >
+         <property name="spacing" >
           <number>3</number>
          </property>
-         <property name="sizeConstraint">
+         <property name="sizeConstraint" >
           <enum>QLayout::SetDefaultConstraint</enum>
          </property>
          <item>
-          <widget class="QPushButton" name="ui_upButton">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+          <widget class="QPushButton" name="ui_upButton" >
+           <property name="sizePolicy" >
+            <sizepolicy vsizetype="Fixed" hsizetype="Maximum" >
              <horstretch>20</horstretch>
              <verstretch>20</verstretch>
             </sizepolicy>
            </property>
-           <property name="minimumSize">
+           <property name="minimumSize" >
             <size>
-             <width>25</width>
-             <height>25</height>
+             <width>30</width>
+             <height>30</height>
             </size>
            </property>
-           <property name="maximumSize">
+           <property name="maximumSize" >
             <size>
-             <width>25</width>
-             <height>25</height>
+             <width>30</width>
+             <height>30</height>
             </size>
            </property>
-           <property name="text">
-            <string>/\</string>
+           <property name="styleSheet" >
+            <string>QPushButton{
+icon-size:30px;
+border:0px;
+}</string>
+           </property>
+           <property name="text" >
+            <string/>
+           </property>
+           <property name="icon" >
+            <iconset resource="../rc/images.qrc" >:/actions/arrowUp.png</iconset>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QPushButton" name="ui_downButton">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
+          <widget class="QPushButton" name="ui_downButton" >
+           <property name="sizePolicy" >
+            <sizepolicy vsizetype="Fixed" hsizetype="Maximum" >
              <horstretch>0</horstretch>
              <verstretch>0</verstretch>
             </sizepolicy>
            </property>
-           <property name="minimumSize">
+           <property name="minimumSize" >
             <size>
-             <width>25</width>
-             <height>25</height>
+             <width>30</width>
+             <height>30</height>
             </size>
            </property>
-           <property name="maximumSize">
+           <property name="maximumSize" >
             <size>
-             <width>25</width>
-             <height>25</height>
+             <width>30</width>
+             <height>30</height>
             </size>
            </property>
-           <property name="text">
-            <string>\/</string>
+           <property name="styleSheet" >
+            <string>QPushButton{
+icon-size:30px;
+border:0px;
+}</string>
+           </property>
+           <property name="text" >
+            <string/>
+           </property>
+           <property name="icon" >
+            <iconset resource="../rc/images.qrc" >:/actions/arrowDn.png</iconset>
            </property>
           </widget>
          </item>
         </layout>
        </item>
        <item>
-        <widget class="QPushButton" name="ui_rightButton">
-         <property name="sizePolicy">
-          <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+        <widget class="QPushButton" name="ui_rightButton" >
+         <property name="sizePolicy" >
+          <sizepolicy vsizetype="Fixed" hsizetype="Expanding" >
            <horstretch>0</horstretch>
            <verstretch>0</verstretch>
           </sizepolicy>
          </property>
-         <property name="minimumSize">
+         <property name="minimumSize" >
           <size>
-           <width>25</width>
-           <height>25</height>
+           <width>30</width>
+           <height>30</height>
           </size>
          </property>
-         <property name="maximumSize">
+         <property name="maximumSize" >
           <size>
-           <width>25</width>
-           <height>25</height>
+           <width>30</width>
+           <height>30</height>
           </size>
          </property>
-         <property name="text">
-          <string>&gt;</string>
+         <property name="styleSheet" >
+          <string>QPushButton{
+icon-size:30px;
+border:0px;
+}</string>
+         </property>
+         <property name="text" >
+          <string/>
+         </property>
+         <property name="icon" >
+          <iconset resource="../rc/images.qrc" >:/actions/arrowRt-27.png</iconset>
          </property>
         </widget>
        </item>
@@ -160,10 +204,10 @@
      </item>
      <item>
       <spacer>
-       <property name="orientation">
+       <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0">
+       <property name="sizeHint" >
         <size>
          <width>40</width>
          <height>20</height>
@@ -172,18 +216,46 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_aButton">
-       <property name="text">
+      <widget class="QPushButton" name="ui_aButton" >
+       <property name="minimumSize" >
+        <size>
+         <width>80</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize" >
+        <size>
+         <width>80</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="styleSheet" >
+        <string>QPushButton{
+border:0px;
+background-image:url(:/actions/rivet80x30L.png);
+color:white;
+font:bold;
+font-size:12pt;
+}
+QPushButton:pressed{
+border:0px;
+background-image:url(:/actions/rivet80x30D.png);
+color:black;
+font:bold;
+font-size:12pt;
+}</string>
+       </property>
+       <property name="text" >
         <string>A</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation">
+       <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0">
+       <property name="sizeHint" >
         <size>
          <width>40</width>
          <height>20</height>
@@ -192,18 +264,46 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_bButton">
-       <property name="text">
+      <widget class="QPushButton" name="ui_bButton" >
+       <property name="minimumSize" >
+        <size>
+         <width>80</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize" >
+        <size>
+         <width>80</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="styleSheet" >
+        <string>QPushButton{
+border:0px;
+background-image:url(:/actions/rivet80x30L.png);
+color:white;
+font:bold;
+font-size:12pt;
+}
+QPushButton:pressed{
+border:0px;
+background-image:url(:/actions/rivet80x30D.png);
+color:black;
+font:bold;
+font-size:12pt;
+}</string>
+       </property>
+       <property name="text" >
         <string>B</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation">
+       <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0">
+       <property name="sizeHint" >
         <size>
          <width>40</width>
          <height>20</height>
@@ -215,6 +315,15 @@
    </item>
   </layout>
  </widget>
- <resources/>
+ <customwidgets>
+  <customwidget>
+   <class>QPlainTextEdit</class>
+   <extends>QWidget</extends>
+   <header>qplaintextedit.h</header>
+  </customwidget>
+ </customwidgets>
+ <resources>
+  <include location="../rc/images.qrc" />
+ </resources>
  <connections/>
 </ui>
