--- a/cbcui/ui/MainWindow.ui
+++ b/cbcui/ui/MainWindow.ui
@@ -1,89 +1,112 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0">
+<ui version="4.0" >
  <class>MainWindow</class>
- <widget class="QDialog" name="MainWindow">
-  <property name="geometry">
+ <widget class="QDialog" name="MainWindow" >
+  <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>322</width>
+    <width>320</width>
     <height>250</height>
    </rect>
   </property>
-  <property name="windowTitle">
+  <property name="windowTitle" >
    <string>Dialog</string>
   </property>
-  <property name="styleSheet">
+  <property name="styleSheet" >
    <string>QDialog { background-image: url(:/background-inverted.png) }</string>
   </property>
-  <property name="sizeGripEnabled">
+  <property name="sizeGripEnabled" >
    <bool>false</bool>
   </property>
-  <property name="modal">
+  <property name="modal" >
    <bool>false</bool>
   </property>
-  <layout class="QVBoxLayout">
-   <property name="spacing">
+  <layout class="QVBoxLayout" >
+   <property name="spacing" >
     <number>0</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin" >
+    <number>0</number>
+   </property>
+   <property name="topMargin" >
+    <number>0</number>
+   </property>
+   <property name="rightMargin" >
+    <number>0</number>
+   </property>
+   <property name="bottomMargin" >
     <number>0</number>
    </property>
    <item>
-    <layout class="QHBoxLayout">
-     <property name="spacing">
+    <layout class="QHBoxLayout" >
+     <property name="spacing" >
       <number>0</number>
      </property>
-     <property name="sizeConstraint">
+     <property name="sizeConstraint" >
       <enum>QLayout::SetDefaultConstraint</enum>
      </property>
      <item>
-      <widget class="QPushButton" name="ui_backButton">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <widget class="QPushButton" name="ui_backButton" >
+       <property name="sizePolicy" >
+        <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="minimumSize">
+       <property name="minimumSize" >
         <size>
          <width>54</width>
          <height>27</height>
         </size>
        </property>
-       <property name="maximumSize">
+       <property name="maximumSize" >
         <size>
          <width>54</width>
          <height>27</height>
         </size>
        </property>
-       <property name="focusPolicy">
+       <property name="focusPolicy" >
         <enum>Qt::NoFocus</enum>
        </property>
-       <property name="text">
+       <property name="styleSheet" >
+        <string>QPushButton{
+border:0px;
+background-image:url(:/actions/back-wide.png);
+color:black;
+font-size:11pt;
+text-align:left;
+}
+QPushButton:pressed{
+border:1px solid black;
+background-image:url(:/actions/back-wide.png);
+color:black;
+font-size:11pt;
+text-align:left;
+}</string>
+       </property>
+       <property name="text" >
         <string/>
        </property>
-       <property name="icon">
-        <iconset resource="../rc/images.qrc">
-         <normaloff>:/actions/back-wide.png</normaloff>:/actions/back-wide.png</iconset>
+       <property name="icon" >
+        <iconset/>
        </property>
-       <property name="iconSize">
+       <property name="iconSize" >
         <size>
          <width>54</width>
          <height>27</height>
         </size>
        </property>
-       <property name="flat">
+       <property name="flat" >
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item>
       <spacer>
-       <property name="orientation">
+       <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0">
+       <property name="sizeHint" >
         <size>
          <width>40</width>
          <height>20</height>
@@ -92,24 +115,109 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_runstopButton">
-       <property name="focusPolicy">
+      <widget class="QPushButton" name="ui_runstopButton" >
+       <property name="sizePolicy" >
+        <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+       <property name="minimumSize" >
+        <size>
+         <width>95</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize" >
+        <size>
+         <width>95</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="sizeIncrement" >
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="baseSize" >
+        <size>
+         <width>0</width>
+         <height>0</height>
+        </size>
+       </property>
+       <property name="focusPolicy" >
         <enum>Qt::NoFocus</enum>
        </property>
-       <property name="text">
-        <string>Go/Stop</string>
+       <property name="layoutDirection" >
+        <enum>Qt::LeftToRight</enum>
        </property>
-       <property name="flat">
+       <property name="styleSheet" >
+        <string>QPushButton{
+border:0px;
+background-image:url(:/actions/rivet95x30L.png);
+color:black;
+font-size:10pt;
+padding-left:5px;
+font:bold;
+}
+QPushButton:checked{
+border:0px;
+background-image:url(:/actions/rivet95x30Green.png);
+color:white;
+font:bold;
+}</string>
+       </property>
+       <property name="text" >
+        <string>Run ---</string>
+       </property>
+       <property name="checkable" >
+        <bool>true</bool>
+       </property>
+       <property name="flat" >
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item>
+      <widget class="QPushButton" name="ui_estopButton" >
+       <property name="minimumSize" >
+        <size>
+         <width>95</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize" >
+        <size>
+         <width>95</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="styleSheet" >
+        <string>QPushButton{
+border:0px;
+background-image:url(:/actions/rivet95x30Red.png);
+color:white;
+font:bold;
+font-size:14pt;
+}
+QPushButton:pressed{
+border:0px;
+background-image:url(:/actions/rivet95x30D.png);
+color:white;
+}</string>
+       </property>
+       <property name="text" >
+        <string>E-Stop</string>
+       </property>
+      </widget>
+     </item>
+     <item>
       <spacer>
-       <property name="orientation">
+       <property name="orientation" >
         <enum>Qt::Horizontal</enum>
        </property>
-       <property name="sizeHint" stdset="0">
+       <property name="sizeHint" >
         <size>
          <width>40</width>
          <height>20</height>
@@ -118,58 +226,54 @@
       </spacer>
      </item>
      <item>
-      <widget class="QLabel" name="ui_battery">
-       <property name="text">
-        <string>Batt</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="ui_closeButton">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <widget class="QPushButton" name="ui_closeButton" >
+       <property name="sizePolicy" >
+        <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
-       <property name="minimumSize">
+       <property name="minimumSize" >
         <size>
-         <width>54</width>
+         <width>60</width>
          <height>27</height>
         </size>
        </property>
-       <property name="maximumSize">
+       <property name="maximumSize" >
         <size>
-         <width>54</width>
+         <width>60</width>
          <height>27</height>
         </size>
        </property>
-       <property name="focusPolicy">
+       <property name="focusPolicy" >
         <enum>Qt::NoFocus</enum>
        </property>
-       <property name="styleSheet">
-        <string/>
+       <property name="styleSheet" >
+        <string>QPushButton{
+border:0px;
+background-image:url(:/actions/close-wide.png);
+color:black;
+font-size:11pt;
+text-align:left;
+padding-left:2px;
+}</string>
        </property>
-       <property name="text">
-        <string/>
+       <property name="text" >
+        <string>100%</string>
        </property>
-       <property name="icon">
-        <iconset resource="../rc/images.qrc">
-         <normaloff>:/actions/close-wide.png</normaloff>:/actions/close-wide.png</iconset>
-       </property>
-       <property name="iconSize">
+       <property name="iconSize" >
         <size>
          <width>54</width>
          <height>27</height>
         </size>
        </property>
-       <property name="autoExclusive">
+       <property name="autoExclusive" >
         <bool>false</bool>
        </property>
-       <property name="default">
+       <property name="default" >
         <bool>false</bool>
        </property>
-       <property name="flat">
+       <property name="flat" >
         <bool>true</bool>
        </property>
       </widget>
@@ -177,26 +281,26 @@
     </layout>
    </item>
    <item>
-    <widget class="QWidget" name="ui_widget" native="true">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <widget class="QWidget" native="1" name="ui_widget" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="minimumSize">
+     <property name="minimumSize" >
       <size>
        <width>320</width>
        <height>213</height>
       </size>
      </property>
-     <property name="maximumSize">
+     <property name="maximumSize" >
       <size>
        <width>320</width>
        <height>213</height>
       </size>
      </property>
-     <property name="styleSheet">
+     <property name="styleSheet" >
       <string/>
      </property>
     </widget>
@@ -204,7 +308,7 @@
   </layout>
  </widget>
  <resources>
-  <include location="../rc/images.qrc"/>
+  <include location="../rc/images.qrc" />
  </resources>
  <connections/>
 </ui>
