--- a/cbcui/ui/SensorsMotors.ui
+++ b/cbcui/ui/SensorsMotors.ui
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0">
+<ui version="4.0" >
  <class>SensorsMotors</class>
- <widget class="QWidget" name="SensorsMotors">
-  <property name="geometry">
+ <widget class="QWidget" name="SensorsMotors" >
+  <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
@@ -10,58 +9,138 @@
     <height>213</height>
    </rect>
   </property>
-  <property name="windowTitle">
+  <property name="windowTitle" >
    <string>Form</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
-    <widget class="QPushButton" name="ui_sensorPortsButton">
-     <property name="maximumSize">
+  <layout class="QGridLayout" >
+   <item row="0" column="0" >
+    <widget class="QPushButton" name="ui_sensorPortsButton" >
+     <property name="minimumSize" >
       <size>
-       <width>90</width>
-       <height>16777215</height>
+       <width>95</width>
+       <height>30</height>
       </size>
      </property>
-     <property name="text">
+     <property name="maximumSize" >
+      <size>
+       <width>95</width>
+       <height>30</height>
+      </size>
+     </property>
+     <property name="styleSheet" >
+      <string>QPushButton{
+border:0px;
+background-image:url(:/actions/rivet95x30L.png);
+color:black;
+font-size:12pt;
+}
+QPushButton:pressed{
+border:0px;
+background-image:url(:/actions/rivet95x30D.png);
+color:white;
+font-size:12pt;
+}</string>
+     </property>
+     <property name="text" >
       <string>Sensor Ports</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QPushButton" name="ui_graphButton">
-     <property name="maximumSize">
+   <item row="1" column="0" >
+    <widget class="QPushButton" name="ui_graphButton" >
+     <property name="minimumSize" >
       <size>
-       <width>90</width>
-       <height>16777215</height>
+       <width>95</width>
+       <height>30</height>
       </size>
      </property>
-     <property name="text">
+     <property name="maximumSize" >
+      <size>
+       <width>95</width>
+       <height>30</height>
+      </size>
+     </property>
+     <property name="styleSheet" >
+      <string>QPushButton{
+border:0px;
+background-image:url(:/actions/rivet95x30L.png);
+color:black;
+font-size:12pt;
+}
+QPushButton:pressed{
+border:0px;
+background-image:url(:/actions/rivet95x30D.png);
+color:white;
+font-size:12pt;
+}</string>
+     </property>
+     <property name="text" >
       <string>Graph</string>
      </property>
     </widget>
    </item>
-   <item row="0" column="1">
-    <widget class="QPushButton" name="ui_motorsButton">
-     <property name="maximumSize">
+   <item row="0" column="1" >
+    <widget class="QPushButton" name="ui_motorsButton" >
+     <property name="minimumSize" >
       <size>
-       <width>90</width>
-       <height>16777215</height>
+       <width>95</width>
+       <height>30</height>
       </size>
      </property>
-     <property name="text">
+     <property name="maximumSize" >
+      <size>
+       <width>95</width>
+       <height>30</height>
+      </size>
+     </property>
+     <property name="styleSheet" >
+      <string>QPushButton{
+border:0px;
+background-image:url(:/actions/rivet95x30L.png);
+color:black;
+font-size:12pt;
+}
+QPushButton:pressed{
+border:0px;
+background-image:url(:/actions/rivet95x30D.png);
+color:white;
+font-size:12pt;
+}</string>
+     </property>
+     <property name="text" >
       <string>Motors</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QPushButton" name="ui_servosButton">
-     <property name="maximumSize">
+   <item row="1" column="1" >
+    <widget class="QPushButton" name="ui_servosButton" >
+     <property name="minimumSize" >
       <size>
-       <width>90</width>
-       <height>16777215</height>
+       <width>95</width>
+       <height>30</height>
       </size>
      </property>
-     <property name="text">
+     <property name="maximumSize" >
+      <size>
+       <width>95</width>
+       <height>30</height>
+      </size>
+     </property>
+     <property name="styleSheet" >
+      <string>QPushButton{
+border:0px;
+background-image:url(:/actions/rivet95x30L.png);
+color:black;
+font-size:12pt;
+}
+QPushButton:pressed{
+border:0px;
+background-image:url(:/actions/rivet95x30D.png);
+color:white;
+font-size:12pt;
+}</string>
+     </property>
+     <property name="text" >
       <string>Servos</string>
      </property>
     </widget>
