--- a/cbcui/ui/Settings.ui
+++ b/cbcui/ui/Settings.ui
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0">
+<ui version="4.0" >
  <class>Settings</class>
- <widget class="QWidget" name="Settings">
-  <property name="geometry">
+ <widget class="QWidget" name="Settings" >
+  <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
@@ -10,28 +9,28 @@
     <height>213</height>
    </rect>
   </property>
-  <property name="minimumSize">
+  <property name="minimumSize" >
    <size>
     <width>320</width>
     <height>213</height>
    </size>
   </property>
-  <property name="maximumSize">
+  <property name="maximumSize" >
    <size>
     <width>320</width>
     <height>213</height>
    </size>
   </property>
-  <property name="windowTitle">
+  <property name="windowTitle" >
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QHBoxLayout" >
    <item>
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
+    <spacer>
+     <property name="orientation" >
       <enum>Qt::Horizontal</enum>
      </property>
-     <property name="sizeHint" stdset="0">
+     <property name="sizeHint" >
       <size>
        <width>62</width>
        <height>20</height>
@@ -40,13 +39,13 @@
     </spacer>
    </item>
    <item>
-    <layout class="QVBoxLayout" name="verticalLayout">
+    <layout class="QVBoxLayout" >
      <item>
-      <spacer name="verticalSpacer">
-       <property name="orientation">
+      <spacer>
+       <property name="orientation" >
         <enum>Qt::Vertical</enum>
        </property>
-       <property name="sizeHint" stdset="0">
+       <property name="sizeHint" >
         <size>
          <width>20</width>
          <height>40</height>
@@ -55,18 +54,44 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_recalibrateMotorsButton">
-       <property name="text">
+      <widget class="QPushButton" name="ui_recalibrateMotorsButton" >
+       <property name="minimumSize" >
+        <size>
+         <width>160</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize" >
+        <size>
+         <width>160</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="styleSheet" >
+        <string>QPushButton{
+border:0px;
+background-image:url(:/actions/rivet160x30L.png);
+color:black;
+font-size:12pt;
+}
+QPushButton:pressed{
+border:0px;
+background-image:url(:/actions/rivet160x30D.png);
+color:white;
+font-size:12pt;
+}</string>
+       </property>
+       <property name="text" >
         <string>Recalibrate Motors</string>
        </property>
       </widget>
      </item>
      <item>
-      <spacer name="verticalSpacer_2">
-       <property name="orientation">
+      <spacer>
+       <property name="orientation" >
         <enum>Qt::Vertical</enum>
        </property>
-       <property name="sizeHint" stdset="0">
+       <property name="sizeHint" >
         <size>
          <width>20</width>
          <height>40</height>
@@ -75,18 +100,44 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_recalibrateAccelerometerButton">
-       <property name="text">
+      <widget class="QPushButton" name="ui_recalibrateAccelerometerButton" >
+       <property name="minimumSize" >
+        <size>
+         <width>160</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize" >
+        <size>
+         <width>160</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="styleSheet" >
+        <string>QPushButton{
+border:0px;
+background-image:url(:/actions/rivet160x30L.png);
+color:black;
+font-size:12pt;
+}
+QPushButton:pressed{
+border:0px;
+background-image:url(:/actions/rivet160x30D.png);
+color:white;
+font-size:12pt;
+}</string>
+       </property>
+       <property name="text" >
         <string>Recalibrate Accelerometer</string>
        </property>
       </widget>
      </item>
      <item>
-      <spacer name="verticalSpacer_3">
-       <property name="orientation">
+      <spacer>
+       <property name="orientation" >
         <enum>Qt::Vertical</enum>
        </property>
-       <property name="sizeHint" stdset="0">
+       <property name="sizeHint" >
         <size>
          <width>20</width>
          <height>40</height>
@@ -95,18 +146,44 @@
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_resetPID">
-       <property name="text">
+      <widget class="QPushButton" name="ui_resetPID" >
+       <property name="minimumSize" >
+        <size>
+         <width>160</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize" >
+        <size>
+         <width>160</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="styleSheet" >
+        <string>QPushButton{
+border:0px;
+background-image:url(:/actions/rivet160x30L.png);
+color:black;
+font-size:12pt;
+}
+QPushButton:pressed{
+border:0px;
+background-image:url(:/actions/rivet160x30D.png);
+color:white;
+font-size:12pt;
+}</string>
+       </property>
+       <property name="text" >
         <string>Reset PID</string>
        </property>
       </widget>
      </item>
      <item>
-      <spacer name="verticalSpacer_4">
-       <property name="orientation">
+      <spacer>
+       <property name="orientation" >
         <enum>Qt::Vertical</enum>
        </property>
-       <property name="sizeHint" stdset="0">
+       <property name="sizeHint" >
         <size>
          <width>20</width>
          <height>40</height>
@@ -117,11 +194,11 @@
     </layout>
    </item>
    <item>
-    <spacer name="horizontalSpacer_2">
-     <property name="orientation">
+    <spacer>
+     <property name="orientation" >
       <enum>Qt::Horizontal</enum>
      </property>
-     <property name="sizeHint" stdset="0">
+     <property name="sizeHint" >
       <size>
        <width>61</width>
        <height>20</height>
