camera settings saving problem fixed, graph widget refresh increment fixed, added buttons on settings page but unconnected.

--- a/cbcui/ui/Settings.ui
+++ b/cbcui/ui/Settings.ui
@@ -146,7 +146,7 @@ font-size:12pt;
       </spacer>
      </item>
      <item>
-      <widget class="QPushButton" name="ui_resetPID" >
+      <widget class="QPushButton" name="ui_resetPIDButton" >
        <property name="minimumSize" >
         <size>
          <width>160</width>
@@ -190,6 +190,39 @@ font-size:12pt;
         </size>
        </property>
       </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="ui_cameraDefaultButton" >
+       <property name="minimumSize" >
+        <size>
+         <width>160</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="maximumSize" >
+        <size>
+         <width>160</width>
+         <height>30</height>
+        </size>
+       </property>
+       <property name="styleSheet" >
+        <string>QPushButton{
+border:0px;
+background-image:url(:/actions/rivet160x30L.png);
+color:black;
+font-size:12pt;
+}
+QPushButton:pressed{
+border:0px;
+background-image:url(:/actions/rivet160x30D.png);
+color:white;
+font-size:12pt;
+}</string>
+       </property>
+       <property name="text" >
+        <string>Camera Defaults</string>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
