--- a/cbcui/ui/Servos.ui
+++ b/cbcui/ui/Servos.ui
@@ -286,6 +286,19 @@ font-size:20pt;</string>
          </property>
         </widget>
        </item>
+       <item>
+        <spacer>
+         <property name="orientation" >
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" >
+          <size>
+           <width>20</width>
+           <height>40</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
       </layout>
      </item>
     </layout>
@@ -448,14 +461,23 @@ border:0px;
    </item>
    <item>
     <layout class="QGridLayout" >
+     <property name="bottomMargin" >
+      <number>5</number>
+     </property>
      <property name="horizontalSpacing" >
       <number>0</number>
      </property>
      <property name="verticalSpacing" >
       <number>0</number>
      </property>
-     <item row="1" column="0" >
+     <item rowspan="2" row="0" column="0" >
       <widget class="QPushButton" name="ui_CenterButton" >
+       <property name="sizePolicy" >
+        <sizepolicy vsizetype="Expanding" hsizetype="Minimum" >
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="minimumSize" >
         <size>
          <width>80</width>
@@ -497,7 +519,7 @@ font-size:12pt;
        </property>
       </widget>
      </item>
-     <item row="1" column="1" >
+     <item rowspan="2" row="0" column="1" >
       <spacer>
        <property name="orientation" >
         <enum>Qt::Horizontal</enum>
@@ -510,8 +532,14 @@ font-size:12pt;
        </property>
       </spacer>
      </item>
-     <item row="1" column="3" >
+     <item rowspan="2" row="0" column="3" >
       <widget class="QPushButton" name="ui_UpdateButton" >
+       <property name="sizePolicy" >
+        <sizepolicy vsizetype="Expanding" hsizetype="Minimum" >
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
        <property name="minimumSize" >
         <size>
          <width>80</width>
@@ -556,7 +584,7 @@ font-size:12pt;
        </property>
       </widget>
      </item>
-     <item row="1" column="2" >
+     <item rowspan="2" row="0" column="2" >
       <widget class="QCheckBox" name="ui_AutoCheck" >
        <property name="text" >
         <string>Automatic</string>
