--- a/cbcui/ui/Settings.ui
+++ b/cbcui/ui/Settings.ui
@@ -130,6 +130,12 @@ font-size:12pt;
        <property name="text" >
         <string>Recalibrate Accelerometer</string>
        </property>
+       <property name="iconSize" >
+        <size>
+         <width>30</width>
+         <height>30</height>
+        </size>
+       </property>
       </widget>
      </item>
      <item>
