Console show on program run check box has been added to the settings page. Battery warning dialogs have also been added.

--- a/cbcui/ui/Settings.ui
+++ b/cbcui/ui/Settings.ui
@@ -230,6 +230,19 @@ font-size:12pt;
        </property>
       </widget>
      </item>
+     <item>
+      <widget class="QCheckBox" name="ui_consoleShowBox" >
+       <property name="layoutDirection" >
+        <enum>Qt::RightToLeft</enum>
+       </property>
+       <property name="text" >
+        <string>Show Console on Run</string>
+       </property>
+       <property name="checked" >
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
     </layout>
    </item>
    <item>
