--- a/cbcui/ui/Keypad.ui
+++ b/cbcui/ui/Keypad.ui
@@ -1,532 +1,479 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<ui version="4.0">
+<ui version="4.0" >
  <class>Keypad</class>
- <widget class="QDialog" name="Keypad">
-  <property name="geometry">
+ <widget class="QDialog" name="Keypad" >
+  <property name="geometry" >
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>160</width>
-    <height>240</height>
+    <width>190</width>
+    <height>282</height>
    </rect>
   </property>
-  <property name="sizePolicy">
-   <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+  <property name="sizePolicy" >
+   <sizepolicy vsizetype="Minimum" hsizetype="Minimum" >
     <horstretch>160</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
-  <property name="minimumSize">
+  <property name="minimumSize" >
    <size>
     <width>160</width>
-    <height>240</height>
+    <height>213</height>
    </size>
   </property>
-  <property name="maximumSize">
+  <property name="maximumSize" >
    <size>
-    <width>160</width>
-    <height>240</height>
+    <width>190</width>
+    <height>282</height>
    </size>
   </property>
-  <property name="windowTitle">
+  <property name="windowTitle" >
    <string>Chumby Sensors</string>
   </property>
-  <property name="styleSheet">
-   <string notr="true">QDialog{background-color:rgb(67, 67, 67); border:1px solid rgb(170, 170, 127);margin:3px}
+  <property name="styleSheet" >
+   <string>QDialog{background-color:rgb(67, 67, 67); border:1px solid rgb(170, 170, 127);margin:3px}
 QPushButton{background-image:url(:/actions/buttonSquare.png);background-position: center; background-origin: margin; background-clip: margin; border:0px solid}
 QPushButton:pressed{background-image:url(:/actions/buttonSquarePress.png);background-position: center; background-origin: margin; background-clip: margin; border:0px solid}
 QLineEdit{border:1px solid red; border-radius:5px}
 </string>
   </property>
-  <property name="windowFilePath">
+  <property name="windowFilePath" stdset="0" >
    <string/>
   </property>
-  <layout class="QGridLayout" name="gridLayout">
-   <item row="3" column="0">
-    <widget class="QPushButton" name="ui_oneButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+  <layout class="QGridLayout" >
+   <item row="3" column="0" >
+    <widget class="QPushButton" name="ui_oneButton" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
        <horstretch>40</horstretch>
        <verstretch>40</verstretch>
       </sizepolicy>
      </property>
-     <property name="minimumSize">
+     <property name="minimumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="maximumSize">
+     <property name="maximumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="font">
-      <font>
-       <pointsize>18</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
+     <property name="font" >
+      <font/>
      </property>
-     <property name="text">
+     <property name="text" >
       <string>1</string>
      </property>
-     <property name="iconSize">
+     <property name="iconSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="flat">
+     <property name="flat" >
       <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
-    <widget class="QPushButton" name="ui_twoButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+   <item row="3" column="1" >
+    <widget class="QPushButton" name="ui_twoButton" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
        <horstretch>40</horstretch>
        <verstretch>40</verstretch>
       </sizepolicy>
      </property>
-     <property name="minimumSize">
+     <property name="minimumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="maximumSize">
+     <property name="maximumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="font">
-      <font>
-       <pointsize>18</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
+     <property name="font" >
+      <font/>
      </property>
-     <property name="text">
+     <property name="text" >
       <string>2</string>
      </property>
-     <property name="iconSize">
+     <property name="iconSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="flat">
+     <property name="flat" >
       <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="3" column="2" colspan="2">
-    <widget class="QPushButton" name="ui_threeButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+   <item row="3" column="2" colspan="2" >
+    <widget class="QPushButton" name="ui_threeButton" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="minimumSize">
+     <property name="minimumSize" >
       <size>
        <width>0</width>
        <height>0</height>
       </size>
      </property>
-     <property name="maximumSize">
+     <property name="maximumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="font">
-      <font>
-       <pointsize>18</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
+     <property name="font" >
+      <font/>
      </property>
-     <property name="text">
+     <property name="text" >
       <string>3</string>
      </property>
-     <property name="iconSize">
+     <property name="iconSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="flat">
+     <property name="flat" >
       <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="4" column="0">
-    <widget class="QPushButton" name="ui_fourButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <item row="4" column="0" >
+    <widget class="QPushButton" name="ui_fourButton" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
        <horstretch>40</horstretch>
        <verstretch>40</verstretch>
       </sizepolicy>
      </property>
-     <property name="minimumSize">
+     <property name="minimumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="maximumSize">
+     <property name="maximumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="font">
-      <font>
-       <pointsize>18</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
+     <property name="font" >
+      <font/>
      </property>
-     <property name="text">
+     <property name="text" >
       <string>4</string>
      </property>
-     <property name="iconSize">
+     <property name="iconSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="flat">
+     <property name="flat" >
       <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="4" column="1">
-    <widget class="QPushButton" name="ui_fiveButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+   <item row="4" column="1" >
+    <widget class="QPushButton" name="ui_fiveButton" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="maximumSize">
+     <property name="maximumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="font">
-      <font>
-       <pointsize>18</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
+     <property name="font" >
+      <font/>
      </property>
-     <property name="text">
+     <property name="text" >
       <string>5</string>
      </property>
-     <property name="iconSize">
+     <property name="iconSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="flat">
+     <property name="flat" >
       <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="4" column="2" colspan="2">
-    <widget class="QPushButton" name="ui_sixButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+   <item row="4" column="2" colspan="2" >
+    <widget class="QPushButton" name="ui_sixButton" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Expanding" hsizetype="Expanding" >
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="maximumSize">
+     <property name="maximumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="font">
-      <font>
-       <pointsize>18</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
+     <property name="font" >
+      <font/>
      </property>
-     <property name="text">
+     <property name="text" >
       <string>6</string>
      </property>
-     <property name="iconSize">
+     <property name="iconSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="flat">
+     <property name="flat" >
       <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="5" column="0">
-    <widget class="QPushButton" name="ui_sevenButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <item row="5" column="0" >
+    <widget class="QPushButton" name="ui_sevenButton" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
        <horstretch>40</horstretch>
        <verstretch>40</verstretch>
       </sizepolicy>
      </property>
-     <property name="minimumSize">
+     <property name="minimumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="maximumSize">
+     <property name="maximumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="font">
-      <font>
-       <pointsize>18</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
+     <property name="font" >
+      <font/>
      </property>
-     <property name="text">
+     <property name="text" >
       <string>7</string>
      </property>
-     <property name="iconSize">
+     <property name="iconSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="flat">
+     <property name="flat" >
       <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="5" column="1">
-    <widget class="QPushButton" name="ui_eightButton">
-     <property name="maximumSize">
+   <item row="5" column="1" >
+    <widget class="QPushButton" name="ui_eightButton" >
+     <property name="maximumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="font">
-      <font>
-       <pointsize>18</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
+     <property name="font" >
+      <font/>
      </property>
-     <property name="text">
+     <property name="text" >
       <string>8</string>
      </property>
-     <property name="iconSize">
+     <property name="iconSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="flat">
+     <property name="flat" >
       <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="5" column="2" colspan="2">
-    <widget class="QPushButton" name="ui_nineButton">
-     <property name="maximumSize">
+   <item row="5" column="2" colspan="2" >
+    <widget class="QPushButton" name="ui_nineButton" >
+     <property name="maximumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="font">
-      <font>
-       <pointsize>18</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
+     <property name="font" >
+      <font/>
      </property>
-     <property name="text">
+     <property name="text" >
       <string>9</string>
      </property>
-     <property name="iconSize">
+     <property name="iconSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="flat">
+     <property name="flat" >
       <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="6" column="0">
-    <widget class="QPushButton" name="ui_negateButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <item row="6" column="0" >
+    <widget class="QPushButton" name="ui_negateButton" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
        <horstretch>40</horstretch>
        <verstretch>40</verstretch>
       </sizepolicy>
      </property>
-     <property name="minimumSize">
+     <property name="minimumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="maximumSize">
+     <property name="maximumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="font">
-      <font>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
+     <property name="font" >
+      <font/>
      </property>
-     <property name="text">
+     <property name="text" >
       <string>-/+</string>
      </property>
     </widget>
    </item>
-   <item row="6" column="1">
-    <widget class="QPushButton" name="ui_zeroButton">
-     <property name="maximumSize">
+   <item row="6" column="1" >
+    <widget class="QPushButton" name="ui_zeroButton" >
+     <property name="maximumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="font">
-      <font>
-       <pointsize>18</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
+     <property name="font" >
+      <font/>
      </property>
-     <property name="text">
+     <property name="text" >
       <string>0</string>
      </property>
-     <property name="iconSize">
+     <property name="iconSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="flat">
+     <property name="flat" >
       <bool>false</bool>
      </property>
     </widget>
    </item>
-   <item row="6" column="2" colspan="2">
-    <widget class="QPushButton" name="ui_enterButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Minimum" vsizetype="Maximum">
+   <item row="6" column="2" colspan="2" >
+    <widget class="QPushButton" name="ui_enterButton" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Maximum" hsizetype="Minimum" >
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="maximumSize">
+     <property name="maximumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="font">
-      <font>
-       <pointsize>12</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
+     <property name="font" >
+      <font/>
      </property>
-     <property name="text">
+     <property name="text" >
       <string>Ent.</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="2">
-    <widget class="QPushButton" name="ui_clearButton">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <item row="2" column="2" >
+    <widget class="QPushButton" name="ui_clearButton" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
        <horstretch>30</horstretch>
        <verstretch>30</verstretch>
       </sizepolicy>
      </property>
-     <property name="minimumSize">
+     <property name="minimumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="maximumSize">
+     <property name="maximumSize" >
       <size>
        <width>40</width>
        <height>40</height>
       </size>
      </property>
-     <property name="font">
-      <font>
-       <pointsize>14</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
+     <property name="font" >
+      <font/>
      </property>
-     <property name="text">
+     <property name="text" >
       <string>C</string>
      </property>
     </widget>
    </item>
-   <item row="2" column="0" colspan="2">
-    <widget class="QLineEdit" name="ui_outputLine">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+   <item row="2" column="0" colspan="2" >
+    <widget class="QLineEdit" name="ui_outputLine" >
+     <property name="sizePolicy" >
+      <sizepolicy vsizetype="Fixed" hsizetype="Expanding" >
        <horstretch>0</horstretch>
        <verstretch>28</verstretch>
       </sizepolicy>
      </property>
-     <property name="minimumSize">
+     <property name="minimumSize" >
       <size>
        <width>100</width>
        <height>30</height>
       </size>
      </property>
-     <property name="maximumSize">
+     <property name="maximumSize" >
       <size>
        <width>100</width>
        <height>30</height>
       </size>
      </property>
-     <property name="sizeIncrement">
+     <property name="sizeIncrement" >
       <size>
        <width>0</width>
        <height>0</height>
       </size>
      </property>
-     <property name="text">
+     <property name="text" >
       <string/>
      </property>
-     <property name="alignment">
+     <property name="alignment" >
       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
      </property>
-     <property name="readOnly">
+     <property name="readOnly" >
       <bool>false</bool>
      </property>
     </widget>
@@ -534,7 +481,7 @@ QLineEdit{border:1px solid red; border-radius:5px}
   </layout>
  </widget>
  <resources>
-  <include location="icons/icons.qrc"/>
+  <include location="../rc/images.qrc" />
  </resources>
  <connections/>
 </ui>
