--- a/cbcui/ui/Graph.ui
+++ b/cbcui/ui/Graph.ui
@@ -619,6 +619,26 @@ font:bold;</string>
        </property>
       </spacer>
      </item>
+     <item>
+      <widget class="QDoubleSpinBox" name="ui_delTimeBox" >
+       <property name="readOnly" >
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer>
+       <property name="orientation" >
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" >
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
     </layout>
    </item>
   </layout>
